--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,4 @@
 EMAIL_USER=shripadwattamwar19@gmail.com
 EMAIL_PASS=gqvk xuln wqrw otae
+DATABASE_URL = "mongodb+srv://shripadwattamwar19:N6XDkn3XPdLEAFqn@cluster0.i9ozg9c.mongodb.net/eVotingdb?retryWrites=true&w=majority
+"
