--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "backend",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
