--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.13",
     "twilio": "^5.1.1"
   }
